appmodel renders list from main

--- a/public/index.html
+++ b/public/index.html
@@ -8,17 +8,17 @@
     <body>
       <div id='container'></div>
     </body>
-    <script type="text/javascript" src="bower_components/materialize/dist/js/materialize.js"></script>
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/underscore/underscore.js"></script>
+    <script type="text/javascript" src="bower_components/materialize/dist/js/materialize.js"></script>
     <script src="bower_components/backbone/backbone.js"></script>
 
 
     <!-- include backbone views, models, and collections here -->
-    <script src="backbone/models/VideoModel.js"></script>
-    <script src="backbone/collections/VideosCollection.js"></script>
-    <script src="backbone/views/LibraryEntryView.js"></script>
-    <script src="backbone/views/LibraryView.js"></script>
+    <!-- // <script src="backbone/models/VideoModel.js"></script> -->
+    <!-- // <script src="backbone/collections/VideosCollection.js"></script> -->
+    <!-- // <script src="backbone/views/LibraryEntryView.js"></script> -->
+    <!-- // <script src="backbone/views/LibraryView.js"></script> -->
 
     <script src="backbone/models/AppModel.js"></script>
     <script src="backbone/views/AppView.js"></script>
