--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
 
     <body>
       <div id='container'></div>
+      <button id="testButton">nic cage....</button>
     </body>
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/underscore/underscore.js"></script>
@@ -16,12 +17,15 @@
 
     <!-- include backbone views, models, and collections here -->
     <!-- // <script src="backbone/models/VideoModel.js"></script> -->
-    <!-- // <script src="backbone/collections/VideosCollection.js"></script> -->
-    <!-- // <script src="backbone/views/LibraryEntryView.js"></script> -->
-    <!-- // <script src="backbone/views/LibraryView.js"></script> -->
+    <script src="backbone/views/EntryView.js"></script>
+    <script src="backbone/views/LibraryView.js"></script>
+    <script src="backbone/models/EntryModel.js"></script>
 
+    <script src="backbone/collections/EntryCollection.js"></script>
     <script src="backbone/models/AppModel.js"></script>
     <script src="backbone/views/AppView.js"></script>
 
     <script type="text/javascript" src="js/main.js"></script>
+    <script type="text/javascript" src="js/imdbScraper.js"></script>
+
   </html>
