query by actor working. saves to mongo

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 
     <body>
       <div id='container'>
-      	<div id="matchupView">
+      	<div id="matchupView" class="row">
       		<div id="movieA"></div>
 	      	<div id="movieB"></div>
       	</div>
