matchupSubmit targets the correct mongo models

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 	      	<div id="movieB"></div>
       	</div>
       </div>
-      <button id="testButton">nic cage....</button>
+      <button id="testButton">Throw him in the CAGE</button>
       <input id="query" placeholder="Actor's IMDB id">
     </body>
     <script src="bower_components/jquery/dist/jquery.js"></script>
@@ -35,7 +35,7 @@
     <script src="backbone/views/AppView.js"></script>
     
 
-    <script type="text/javascript" src="js/main.js"></script>
+    <!-- // <script type="text/javascript" src="js/main.js"></script> -->
     <script type="text/javascript" src="js/imdbScraper.js"></script>
 
   </html>
