--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-  <html>
+  <html ng-app="cageMatch">
     <head>
       <!--Import materialize.css-->
       <link type="text/css" rel="stylesheet" href="bower_components/materialize/dist/css/materialize.css" />
@@ -7,7 +7,7 @@
 
     <body>
       <div id='container'>
-      	<div id="matchupView" class="row">
+      	<div ng-view id="matchupView" class="row">
       		<div id="movieA"></div>
 	      	<div id="movieB"></div>
       	</div>
@@ -18,21 +18,21 @@
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/underscore/underscore.js"></script>
     <script type="text/javascript" src="bower_components/materialize/dist/js/materialize.js"></script>
-    <script src="bower_components/backbone/backbone.js"></script>
+    <script src="bower_components/angular/angular.js"></script>
+    <script src="bower_components/angular-route/angular-route.js"></script>
+
+    <script src="angular/cageModule.js"></script>
+    <!-- // <script src="bower_components/backbone/backbone.js"></script> -->
 
 
     <!-- include backbone views, models, and collections here -->
 
-    <!-- // <script src="backbone/models/EntryModel.js"></script> -->
-    <script src="backbone/models/MovieModel.js"></script>
+    <!-- // <script src="backbone/models/MovieModel.js"></script> -->
 
-    <script src="backbone/models/AppModel.js"></script>
-    <script src="backbone/Collections/EntryCollection.js"></script>
-    <!-- // <script src="backbone/Collections/MatchupCollection.js"></script> -->
-    <script src="backbone/views/MovieView.js"></script>
-    <!-- // <script src="backbone/views/MatchupView.js"></script> -->
-    <!-- // <script src="backbone/views/LibraryView.js"></script> -->
-    <script src="backbone/views/AppView.js"></script>
+    <!-- // <script src="backbone/models/AppModel.js"></script> -->
+    <!-- // <script src="backbone/Collections/EntryCollection.js"></script> -->
+    <!-- // <script src="backbone/views/MovieView.js"></script> -->
+    <!-- // <script src="backbone/views/AppView.js"></script> -->
     
 
     <!-- // <script type="text/javascript" src="js/main.js"></script> -->
