data validation - filmo-head-actress

--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,9 @@
   <html ng-app="cageMatch">
     <head>
-      <!--Import materialize.css-->
-      <link type="text/css" rel="stylesheet" href="bower_components/materialize/dist/css/materialize.css" />
-      <link type="text/css" rel="stylesheet" href="css/style.css" />
+		<base href="/">
+		<!--Import materialize.css-->
+		<link type="text/css" rel="stylesheet" href="bower_components/materialize/dist/css/materialize.css" />
+		<link type="text/css" rel="stylesheet" href="css/style.css" />
     </head>
 
     <body>
